# End-to-End-Data-Engineering-Project

./: .env  .gitignore  README.md  TODO.md  debezium-connector-config.json  docker-compose.yml  inserts.sql  mysql_inserts.sql  t.json  test.ipynb
.metals/: metals.lock.db  metals.mv.db
consumer/: README.md  main.py  pyproject.toml  test.json
consumer/data/: staging-init.sql  staging.db
consumer/schemas/: tables.yml
consumer/test/: unit_tests.py
dagster/: Dockerfile  init.sh
dagster/ops/: trigger_flink_job_op.py
dagster_code/: Dockerfile  definitions.py
dagster_code/assets/: landing_dags.py
dagster_code/ops/: trigger_flink_job_op.py
dagster_webserver/: Dockerfile  dagster.yaml  init.sh
data/: README.md  staging-init.sql
database-init-scripts/: README.md
druid/: Dockerfile  main.py  pyproject.toml
flink-extractor/: .env  Dockerfile  README.md  init-source-tables.sql  main.py  pom.xml  pyproject.toml
flink-extractor/lib/: README.txt
flink/lib/: README.md
mock-db-client/: README.md  main.py  pyproject.toml
modeling/: .sqlfluff  .sqlfluffignore  README.md  profiles.yml  pyproject.toml
modeling/book_store/: .user.yml  dbt_project.yml  profiles.yml
modeling/ctas/: d_authors.sql  d_books.sql  d_carriers.sql  d_carriers_services.sql  d_customers.sql  d_date.sql  d_orders.sql  d_shipments.sql  f_book_inventory.sql  f_customer_events.sql  f_order_events.sql  f_order_item_events.sql  f_shipment_events.sql  (+3 more)
utils/: build-and-upload-flink-job.py  create_connector.py  dev-setup.ps1  list-topics.sh  start-flink-jobs.ps1  start_flink_jobs.ps1
(+101 files in other folders)
