[project]
name = "mock-db-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.3",
    "faker>=37.3.0",
    "mysql-connector-python>=9.3.0",
    "psycopg2>=2.9.10",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
]
